# PyPDFPatra

./: .gitignore  .pre-commit-config.yaml  DECISIONS.md  LICENSE  README.md  STATUS.md  SUPPORTED_CSS.md  build_engine.py  pyproject.toml  pytest.ini  task.md  test_border.py  weasy_print_stretegy.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BACKLOG.md  CONTRIBUTING.md  CSS_PROPERTY_PIPELINE.md  DECISIONS.md  EXTENDING.md  PLAN.md  STATUS.md  SUPPORTED_CSS.md
example/: coverage.html  generate_hello.py  test_coverage.py
src/pypdfpatra/: __init__.py  api.py  colors.py  defaults.py  html.py  logger.py  main.py  matcher.py  render.py
src/pypdfpatra/engine/: __init__.py  box_generator.py  css_parser.py  font_metrics.py  image.py  layout_block.py  layout_inline.py  layout_table.py  page.py  shorthand.py  style.py  tree.cp314-win_amd64.pyd.old  tree.pxd  tree.pyx
src/pypdfpatra/engine/layout/: __init__.py  block.py  box_generator.py  common.py  flex.py  inline.py  table.py
src/pypdfpatra/engine/styling/: __init__.py  css_parser.py  matcher.py  resolve.py  shorthand.py  transform_matrix.py  transform_parser.py  user_agent.py  utils.py
tests/: test_auto_dims.py  test_coverage.py  test_fixed_repeat.py  test_flex.py  test_ifc.py  test_invoice.py  test_margin_collapse.py  test_positioning.py  test_positioning_reproduction.py  test_stacking.py  test_unclosed.py
